# Elbow-Angle-Tracking-IMUs

./: README.md
MicroROS_Jazzy_ESP32/: platformio.ini
MicroROS_Jazzy_ESP32/src/: main.cpp
rosbag_file/complementary_rosbag_0/: metadata.yaml
rosbag_file/complementary_rosbag_1/: complementary_rosbag_1_0.mcap  metadata.yaml
rosbag_file/complementary_rosbag_2/: complementary_rosbag_2_0.mcap  metadata.yaml
rosbag_file/madgwick_rosbag_2/: metadata.yaml
rosbag_file/madgwick_rosbag_3/: madgwick_rosbag_3_0.mcap  metadata.yaml
rosbag_file/madgwick_rosbag_4/: madgwick_rosbag_4_0.mcap  metadata.yaml
rosbag_file/madgwick_rosbag_5/: madgwick_rosbag_5_0.mcap  metadata.yaml
rosbag_file/madgwick_rosbag_6/: madgwick_rosbag_6_0.mcap  metadata.yaml
rosbag_file/madgwick_rosbag_7/: madgwick_rosbag_7_0.mcap  metadata.yaml
rosbag_file/sparfun_rosbag_0/: metadata.yaml  sparfun_rosbag_0_0.mcap
rosbag_file/sparkfun_rosbag_1/: metadata.yaml  sparkfun_rosbag_1_0.mcap
rosbag_file/test_sparkfun/: metadata.yaml  test_sparkfun_0.mcap
src/angle_estimation/: package.xml  setup.cfg  setup.py
src/angle_estimation/angle_estimation/: angle_estimation.py
src/angle_estimation/launch/: angle_estimation.launch.py
src/filter_bringup/: package.xml  setup.cfg  setup.py
src/filter_bringup/launch/: imu_complementary_launch.py  imu_madgwick_launch.py
